Changes: - added shortDescription in Recipe response schema - added transfer avatars to cloudinary - change count recipes for mainPage to "1", "2", "3" - added checking e-mail address for subscribe
